# proka-bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  gen_version.py
.cargo/: config.toml
legacy/: .gitignore  Makefile  linker.ld
legacy/boot/: Makefile  boot.asm  cdrom.asm  mbr.asm  stg1.asm
legacy/drivers/: Makefile  fat32.asm  iso9660.asm
legacy/stage2/: Makefile  getinfo.asm  main.asm  prestg3.asm
legacy/stage3/: Makefile  acpi.h  error.asm  load.asm  loadinit.asm  loadkrnl.asm  main.c  paging.h  prestg4.asm
legacy/stage4/: Cargo.toml  Makefile
legacy/stage4/.cargo/: config.toml
legacy/stage4/src/: lib.rs
scripts/: Cargo.toml
uefi/: .gitignore  Cargo.toml  Makefile
uefi/src/: io.rs  lib.rs  main.rs  version.rs
