[workspace]
members = ["uefi", "library", "scripts"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/RainSTR-Studio/proka-bootloader"
authors = ["RainSTR Studio"]

[workspace.metadata]
default-target = { uefi = "x86_64-unknown-uefi", scripts = "x86_64-unknown-linux-gnu" }

[workspace.dependencies]
uefi = { version = "0.35.0", features = ["global_allocator", "alloc", "panic_handler"] }
