[package]
name = "pkbl-uefi"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
uefi = { version = "0.35", features = ["panic_handler"] }
proka-bootloader = { path = "../library", features = ["loader_main"] }
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"] }
